--- a/peermountain_core/src/main/res/layout/pm_set_file_title_dialog.xml
+++ b/peermountain_core/src/main/res/layout/pm_set_file_title_dialog.xml
@@ -5,7 +5,7 @@
               android:background="@color/pm_share_card_bkg"
               android:orientation="vertical">
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <com.peermountain.core.views.PeerMountainTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/pm_margin_normal"
@@ -24,7 +24,7 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-        <com.peermountain.sdk.views.PeerMountainTextView
+        <com.peermountain.core.views.PeerMountainTextView
             android:id="@+id/btnCancel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -32,7 +32,7 @@
             android:gravity="center"
             android:text="Cancel"/>
 
-        <com.peermountain.sdk.views.PeerMountainTextView
+        <com.peermountain.core.views.PeerMountainTextView
             android:id="@+id/btnDone"
             android:layout_width="0dp"
             android:layout_height="match_parent"
