--- a/peermountain_sdk/src/main/res/layout/fragment_confirmation_account.xml
+++ b/peermountain_sdk/src/main/res/layout/fragment_confirmation_account.xml
@@ -12,7 +12,7 @@
         style="@style/pm_sonar"
         android:visibility="visible"/>
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <com.peermountain.core.views.PeerMountainTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/pm_margin_big"
@@ -22,7 +22,7 @@
         android:textSize="18sp"
         android:textStyle="bold"/>
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <com.peermountain.core.views.PeerMountainTextView
         android:id="@+id/tvMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
