--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
@@ -7,7 +7,7 @@
               tools:background="@drawable/pm_bkg"
               tools:activity="com.peermountain.sdk.ui.register.RegisterKeywordsFragment">
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <com.peermountain.core.views.PeerMountainTextView
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         android:textSize="@dimen/pm_big_text"
         android:textStyle="bold"/>
 
-    <com.peermountain.sdk.views.PeerMountainTextView
+    <com.peermountain.core.views.PeerMountainTextView
         android:id="@+id/tvMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
         android:orientation="vertical"
         tools:visibility="visible">
 
-        <com.peermountain.sdk.views.PeerMountainTextView
+        <com.peermountain.core.views.PeerMountainTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -98,7 +98,7 @@
             android:visibility="gone"
             app:srcCompat="@drawable/pm_ic_arrow_back_24dp"/>
 
-        <com.peermountain.sdk.views.PeerMountainTextView
+        <com.peermountain.core.views.PeerMountainTextView
             android:id="@+id/tvNext"
             style="@style/pm_square_btn"
             android:gravity="center"
